syntax = "proto3";

package payment;

service PaymentService {
  rpc PaymentSuccessed (PaymentSuccessedReq) returns (PaymentSuccessedRes);
  rpc PaymentCanceled (PaymentCanceledReq) returns (PaymentCanceledRes);
}

message Empty {}

message PaymentSuccessedReq {
  string orderId = 1;
  optional string transactionId = 2;
}

message PaymentSuccessedRes {
  string message = 1;
  bool isSuccess = 2;
}

message PaymentCanceledReq {
  string orderId = 1;
  optional string transactionId = 2;
}

message PaymentCanceledRes {
  string message = 1;
  bool isSuccess = 2;
}